--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ button:active {
     background-color: rgb(0, 167, 125);
 }
 
-@media (max-height: 900px) {
+@media (max-width: 900px) {
     #container {
         width: 70%;
     }
