--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@ body {
 }
 
 #container {
-    display: block;
-    margin: auto;
-    width: 30%;
+    margin: 27.5%;
+    width: 45%;
     margin-top: 10%;
     height: fit-content;
     padding-bottom: 5%;
@@ -23,10 +22,10 @@ input {
     border-bottom-style: solid;
     border-width: 2px;
     border-color: black;
-    height: 3%;
+    height: 6%;
     font-size: 30px;
     text-align: center;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     background-color: rgb(255, 255, 255, 0.9);
 }
 
@@ -36,15 +35,13 @@ h1 {
 
 h2 {
     padding-top: 10%;
-    padding-bottom: 7%;
-    display: block;
-    margin: auto;
-    width: 60%;
+    padding-bottom: 4%;
+    width: 100%;
 }
 
 div {
-    display: block;
-    margin: auto;
+    padding: 0;
+    margin: 0;
     width: 100%;
     text-align: center;
     font-size: 30px;
@@ -59,12 +56,12 @@ button {
     display: block;
     margin: auto;
     width: 50%;
-    height: 4%;
+    height: 9%;
     margin-top: 5%;
     font-size: larger;
     border-radius: 25px;
     background-color: rgb(0, 213, 160);
-    margin-bottom: 15%;
+    margin-bottom: 5%;
 
 }
 
