--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
 }
 
 #container {
-    margin: 27.5%;
-    width: 45%;
     margin-top: 10%;
     height: fit-content;
     padding-bottom: 5%;
@@ -17,7 +15,7 @@ body {
 }
 
 input {
-    width: 35%;
+    width: 55%;
     border-style: none;
     border-bottom-style: solid;
     border-width: 2px;
@@ -55,7 +53,7 @@ div {
 button {
     display: block;
     margin: auto;
-    width: 50%;
+    width: 60%;
     height: fit-content;
     margin-top: 5%;
     font-size: larger;
@@ -69,8 +67,28 @@ button:active {
     background-color: rgb(0, 167, 125);
 }
 
-@media (max-width: 900px) {
+#gradh1 {
+    padding-bottom: 10%;
+    padding-top: 20%;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    list-style: none;
+    padding-bottom: 2%;
+}
+
+@media (max-width: 1030px) and (min-width: 767px) {
     #container {
         width: 70%;
+    }
+}
+
+@media (max-width: 600px) {
+    button {
+        width: fit-content; 
     }
 }
