--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 }
 
 input {
+    display: block;
+    margin: auto;
     width: 55%;
     border-style: none;
     border-bottom-style: solid;
@@ -25,6 +27,26 @@ input {
     text-align: center;
     margin-bottom: 5%;
     background-color: rgb(255, 255, 255, 0.9);
+}
+
+#h2total {
+    display: inline;
+    width: 60%;
+    padding-top: 5%;
+}
+
+#h2mark {
+    padding-top: 2%;
+    display: none;
+}
+
+#total {
+    display: none;
+}
+
+#check {
+    width: 10%;
+    display: inline;
 }
 
 h1 {
@@ -43,7 +65,6 @@ div {
     width: 100%;
     text-align: center;
     font-size: 30px;
-    margin-top: 5%;
 }
 
 #output {
