--- a/advanced.css
+++ b/advanced.css
@@ -22,7 +22,7 @@ body {
 }
 
 .holder {
-    height: 13vh;
+    height: 180px;
     padding-top: 10%;
     border-radius: 20px;
     background-color: rgb(253, 85, 85);
