--- a/advanced.css
+++ b/advanced.css
@@ -67,3 +67,23 @@ h1 {
     text-align: center;
     color: #f2f2f2;
 }
+
+@media (max-width: 575px) {
+    #container {
+        margin-top: 40%;
+    }
+    .gradiv {
+        height: 290px;
+    }
+    .holder {
+        padding-top: 50px;
+        height: 220px;
+        display: block;
+        margin: auto;
+        width: 80%;
+    
+    }
+    .grade {
+        margin: 0;
+    }
+}
