--- a/header/header.css
+++ b/header/header.css
@@ -1,9 +1,9 @@
 .topnav {
-    overflow: hidden;
     background-color: rgb(0, 0, 0, 0);
-    position: fixed; 
+    position: relative; 
     top: 0;
     width: 100%;
+    height: 60px;
     z-index: 20;
     text-align: center;
 }
@@ -16,159 +16,14 @@
     padding: 30px 35px 10px 34px;
     font-size: 40px;
 }
-  
-.right {
-    text-decoration: none;
-    display: inline-block;
-    padding-bottom: 0.1rem;
-    position: relative;
-}
 
 .right:hover {
     text-decoration: none;
     color: #d6d4d4;
 }
   
-.right::before {
-    content: "";
-    position: absolute;
-    left: 25%;
-    bottom: 0;
-    width: 0;
-    height: 2px;
-    background-color: #ec0b87;
-    transition: width 0.25s ease-out;
-}
-
-.right:hover::before {
-    width: 50%;
-}
-
-a.right:focus {
-    text-decoration: none;
-    text-decoration: underline;
-    text-decoration-color: #ec0b87;
-    text-decoration-thickness: 2px;
-    text-underline-offset: 16px;
-}
-
-.topnav .icon {
-    display: none;
-}
-
-a.logimg {
-    padding: 0px;
-}
-
-.goleft img.left {
-    float: left;
-    height: 90px;
-    padding: 0px 0px 0px 30px;
-}
-
-img.left:hover {
-    animation: zoom-in-zoom-out 2.4s ease infinite;
-}
-
-@keyframes zoom-in-zoom-out {
-    0% {
-      transform: scale(1, 1);
-    }
-    50% {
-      transform: scale(1.1, 1.1);
-    }
-    100% {
-      transform: scale(1, 1);
-    }
-}
-
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #fff;
-    margin: 5px 0;
-    transition: 0.4s;
-}
-  
-.change .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
-}
-  
-.change .bar2 {
-    opacity: 0;
-}
-  
-.change .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
-}
-
-@media (max-width: 768px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-        float: right;
-        display: block;
-        /* margin-right: 5%;
-        margin-top: 5%; */
-    }
-
-    .top {
-        margin-top: 90px;
-        padding-top: 0px;
-    }
-
-    img.left {
-        margin-top: 0px;
-    }
-}
- 
-@media (max-width: 768px) {
-    .topnav.responsive {
-        position: fixed;
-        background-color: rgb(0, 0, 0, 0.5);
-        top: 0;
-        width: 100%;
-    }
-
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: center;
-    }
-
-    .topnav.responsive img.left{
-        margin-top: -90px;
-    }
-
-    .rright {
-        background-color: rgb(0, 0, 0, 0.2);
-    }
-}
-
-@media (max-width: 500px) {
-    .topnav.responsive {
-        width: 100%;
-    }
-}
-
-@media (max-width: 225px) {
-    .left {
-        display: none;
-    }
-
-    .icon {
-        width: 50%;
-        margin-left: 25%;
-        float: none !important;
-    }
-
-    .topnav.responsive .icon {
-        position: absolute;
-        left: 0;
-        top: 0;
+@media (max-width: 575px) {
+    .topnav {
+        height: 200px;
     }
 }
