--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #container {
-    margin-top: 10%;
+    margin-top: 2%;
     height: fit-content;
     padding-bottom: 5%;
     background-color: rgb(255, 255, 255, 0.9);
@@ -22,7 +22,7 @@ input {
     border-bottom-style: solid;
     border-width: 2px;
     border-color: black;
-    height: 6%;
+    height: 8%;
     font-size: 30px;
     text-align: center;
     margin-bottom: 5%;
@@ -69,6 +69,7 @@ div {
 
 #output {
     margin-top: 1%;
+    margin-bottom: 10%;
 }
 
 button {
